# snowdrop

./: .gitmodules  Cargo.toml  README.md  changelog.md  readme.md  rust-toolchain
.cargo/: config.toml
crates/bevy/: Cargo.toml
crates/bevy/src/: lib.rs  macros.rs  overlay.rs  prelude.rs  sdl.rs  tier0.rs  traits.rs
crates/bevy/src/overlay/: convert.rs  gl_swap_window.rs  poll_event.rs
crates/bevy/src/sdl/: convert.rs  gl_swap_window.rs  poll_event.rs
crates/bevy/src/tier0/: command_line.rs
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/examples/: hello.rs
crates/bevy_internal/src/: app.rs  assembly.rs  lib.rs  library.rs  macros.rs  map.rs  traits.rs
crates/bevy_internal/src/map/: range.rs
crates/dismal/: Cargo.toml
crates/dismal/examples/: hello.rs
crates/dismal/src/: assembly.rs  error.rs  lib.rs  library.rs  macros.rs  map.rs  module.rs  pattern.rs  symbol.rs  traits.rs
crates/dismal/src/map/: range.rs
crates/elysium-console/: Cargo.toml  dump.rs
crates/elysium-console/src/: main.rs  parser.rs
crates/elysium-macros/: Cargo.toml
crates/elysium-macros/src/: lib.rs
crates/framework/: Cargo.toml
crates/framework/src/: error.rs  lib.rs  module.rs  scope.rs  system.rs
crates/iced/gl/src/: quad.rs
crates/input/: Cargo.toml
crates/input/src/: keyboard.rs
crates/link/: Cargo.toml
crates/link/examples/: malloc.rs
crates/link/src/: address.rs  error.rs  ffi.rs  lib.rs  module.rs  with_handle.rs
crates/math/: Cargo.toml
crates/math/examples/: foo.rs
crates/math/src/: lib.rs  macros.rs  matrix3x4.rs  vec2.rs  vec3.rs  vec4.rs
crates/mem/: Cargo.toml
crates/mem/examples/: shared.rs  to_absolute.rs
crates/mem/src/: lib.rs  shared.rs
crates/menu/: Cargo.toml
crates/menu/src/: controls.rs  menu.rs  scene.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/pattern/: Cargo.toml
crates/pattern/src/: lib.rs  panic.rs  parse.rs  util.rs  validate.rs
crates/ptr/: Cargo.toml
crates/ptr/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: animation_layer.rs  animation_state.rs  app_system.rs  atomic_mut.rs  beam.rs  class.rs  client.rs  client_class.rs  client_mode.rs  client_state.rs  color.rs  config.rs  console.rs  convar.rs  dt_recv.rs  engine.rs  engine_vgui.rs  entity.rs  entity_list.rs  entry.rs  error.rs  event.rs  ffi.rs  frame.rs  game_console.rs  gl.rs  global.rs  global_vars.rs  globals.rs  hit_group.rs  iced.rs  input.rs  input_stack_system.rs  input_system.rs  interfaces.rs  intrinsics.rs  key_values.rs  launcher.rs  lib.rs  macros.rs  (+33 more)
crates/sdk/src/client/: class.rs  classes.rs  property.rs  table.rs
crates/sdk/src/console/: var.rs
crates/sdk/src/entity/: list.rs  networkable.rs  renderable.rs
crates/sdk/src/iced/: hud.rs  menu.rs  program.rs
crates/sdk/src/material/: category.rs  flag.rs  group.rs  id.rs  kind.rs  material.rs  var.rs
crates/sdk/src/materials/: flag.rs  kind.rs  material.rs
crates/sdk/src/model/: info.rs  render.rs  studio.rs
crates/sdk/src/net_message/: sign_on.rs
crates/sdk/src/networked/: macros.rs  var.rs
crates/sdk/src/panorama/: engine.rs  panel.rs  panorama_engine.rs
crates/sdk/src/sdl/: conversion.rs
crates/sdk/src/trace/: filter.rs  mask.rs  plane.rs  ray.rs  summary.rs  surface.rs  surface_flags.rs
crates/sdk/src/ui/: conversion.rs  hud.rs  menu.rs
crates/sdk/src/ui/sdl/: conversion.rs
crates/state/: Cargo.toml
crates/state/src/: hooks.rs  lib.rs  local.rs
crates/sys/: Cargo.toml  build.rs
crates/sys/src/: bindings.hpp  lib.rs
crates/sys/src/source_1/: basehandle.hpp  basetypes.hpp  buttoncode.hpp  client.hpp  client_class.hpp  color.hpp  dt_common.hpp  dt_recv.hpp  ehandle.hpp  engine.hpp  exprevaluator.hpp  icommandline.hpp  iinput.hpp  imaterial.hpp  imaterialvar.hpp  input.hpp  inputenums.hpp  inputstacksystem.hpp  isoundemittersystembase.hpp  kbutton.hpp  keyvalues.hpp  launcher.hpp  logging_system.hpp  math.hpp  shareddefs.hpp  threadtools.hpp  usercmd.hpp  utlmemory.hpp  utlvector.hpp  vphysics_interface.hpp
src/: anti_aim.rs  assets.rs  controls.rs  entity.rs  error.rs  hooks.rs  launcher.rs  lib.rs  library.rs  main.rs  menu.rs  model.rs  module.rs  networked.rs  options.rs  pattern.rs  scene.rs  simulation.rs  state.rs  ui.rs  util.rs  x86.rs
src/anti_aim/: pitch.rs  roll.rs  yaw.rs
src/entity/: base.rs  fog.rs  list.rs  networkable.rs  player.rs  renderable.rs  repr.rs  tonemap.rs  weapon.rs
src/hooks/: create_material.rs  create_move.rs  draw_model.rs  find_material.rs  frame_stage_notify.rs  override_view.rs  poll_event.rs  swap_window.rs
src/material/: var.rs
src/state/: cache.rs  hooks.rs  local.rs  materials.rs
src/ui/: context.rs  helpers.rs  hud.rs  overlay.rs  program.rs  surface.rs  ui.rs
