[package]
edition = "2021"
name = "elysium"
version = "0.0.0"

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_source = { version = "0.0.0", path = "crates/bevy", default-features = false }

[[bin]]
name = "csgo_linux64"
path = "src/main.rs"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = "symbols"

[workspace]
members = [
    "crates/bevy",
    "crates/bevy_internal",
    "crates/sdk",
    "crates/sys",
]
