[package]
name = "bevy_source"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_asset"] }
bevy_source_internal = { version = "0.0.0", path = "../bevy_internal", default-features = false }
bitflags = { version = "2.2.1", default-features = false }
elysium-sdk = { version = "0.0.0", path = "../sdk", default-features = false }
leafwing-input-manager = { version = "0.9.2", default-features = false }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d", version = "0.35.2", default-features = false, features = ["raw-window-handle"] }
source-sys = { version = "0.0.0", path = "../sys", default-features = false }
