[package]
name = "bevy_source"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_source_internal = { version = "0.0.0", path = "../bevy_internal", default-features = false }
bitflags.workspace = true
elysium-sdk = { version = "0.0.0", path = "../sdk", default-features = false }
# leafwing-input-manager = { version = "0.9.2", default-features = false }
printf-compat = { version = "0.1.1", default-features = false, features = [
    "std",
] }
sdl2.workspace = true
source-sys = { version = "0.0.0", path = "../sys", default-features = false }

[lints]
workspace = true
