[package]
name = "bevy_source_internal"
version = "0.0.0"
edition = "2021"

[dependencies]
# frame & return addresses
backtrace = { version = "0.3.67", default-features = false }
bevy.workspace = true
bitflags.workspace = true
# disassemble code
iced-x86 = { version = "1.18.0", default-features = false, features = [
    "decoder",
    "encoder",
    "instr_info",
    "intel",
    "std",
] }
libc.workspace = true
libloading.workspace = true
# cross-platform memory maps w/ file names
proc-maps = { version = "0.3.0", default-features = false }
# for signatures
regex = { version = "1.8.0", default-features = false, features = [
    "perf",
    "std",
] }
# cross-platform memory protection
region = { version = "3.0.0", default-features = false }
tracing = "*"

[lints]
workspace = true
