[package]
name = "dismal"
version = "0.0.0"
edition = "2021"

[dependencies]
backtrace = { version = "0.3.67", default-features = false }
bitflags = { version = "2.0.2", default-features = false }
iced-x86 = { version = "1.18.0", default-features = false, features = ["decoder", "encoder", "instr_info", "intel", "std"] }
libc = { version = "0.2.140", default-features = false }
libloading = { version = "0.7.4", default-features = false }
proc-maps = { version = "0.3.0", default-features = false }
regex = { version = "1.7.1", default-features = false, features = ["std", "perf"] }
