[package]
edition = "2021"
name = "elysium-mem"
version = "0.0.0"

[dependencies.dismal]
default-features = false
git = "https://github.com/elysian6969/dismal"
rev = "46a6a8d993506d35f4c9f1d8114e1d26c38b0461"

[dependencies.libc]
default-features = false
version = "0.2"

[dependencies.link]
default-features = false
git = "https://github.com/elysian6969/link"
rev = "0c54d56d5472a996a59f6e2bf18e603340ddf48f"

[dependencies.log]
default-features = false
version = "0.4"
