[package]
edition = "2021"
name = "elysium-menu"
version = "0.0.0"

[dependencies]
elysium-mem = { path = "../mem" }
frosting = { git = "https://github.com/elysian6969/frosting" }
iced_glow = { git = "https://github.com/iced-rs/iced" }
iced_native = { git = "https://github.com/iced-rs/iced" }
sdl2-sys = "0.35"
