[package]
edition = "2021"
name = "elysium-sdk"
version = "0.0.0"

[dependencies]
bevy.workspace = true
bevy_source_internal = { version = "0.0.0", path = "../bevy_internal", default-features = false }
bitflags.workspace = true
dirs.workspace = true
libloading.workspace = true
libc.workspace = true
libm.workspace = true
phf = { version = "0.11", default-features = false, features = ["macros"] }
sdl2.workspace = true
source-sys = { version = "0.0.0", path = "../sys", default-features = false }
ubyte = { version = "0.10.3", default-features = false }
thiserror.workspace = true

[dependencies.link]
default-features = false
path = "../link"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[lints]
workspace = true
